# bazel-python-coverage

./: README.md  WORKSPACE
apps/demo/: BUILD.bazel  lib.py  lib_test.py  main.py
py/: BUILD.bazel  requirements_lock.txt
